remove offline mode

--- a/prod-support/editor-server/Dockerfile
+++ b/prod-support/editor-server/Dockerfile
@@ -4,7 +4,6 @@ COPY ./editor-server ./editor-server
 COPY ./editor-server/.env.production ./editor-server/.env
 
 WORKDIR /editor-server
-RUN cargo build --release
 
 EXPOSE 4000
-CMD ["./target/release/editor-server"]
+CMD ["bash", "-c", "cargo prisma migrate deploy && cargo run --release"]
