--- a/editor-server/.env.development
+++ b/editor-server/.env.development
@@ -1,11 +1,11 @@
 ENV=development
-SERVER_PORT=4000
+SERVER_PORT=4001
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 REDIS_CTRL_PREFIX=CTRLFRAME_
 REDIS_POS_PREFIX=POSFRAME_
-MYSQL_URL="mysql://root:password@localhost:3306/editor"
-# DATABASE_URL="mysql://root:password@localhost:3306/benchmark"
+DATABASE_URL="mysql://root:password@localhost:3306/editor"
+DATABASE_TEST_URL="mysql://root:password@localhost:3306/test"
 EXPIRATION_TIME_HOURS=24
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=admin
