--- a/prod-support/prod.docker-compose.yml
+++ b/prod-support/prod.docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.3"
 services:
   editer-server:
-    image: 2024-lightdance-editor
+    image: 2024-lightdance-editor-server
     container_name: 2024-lightdance-editor-server
     build:
       context: ..
